Updated Workout Controller
new atheltes search endpoint.

--- a/Client/Pages/WorkoutCenter/WorkoutCenter.razor
+++ b/Client/Pages/WorkoutCenter/WorkoutCenter.razor
@@ -1,6 +1,6 @@
 @using ProServ.Client.Pages;
 
-@page  "/Workout-Center"
+@page "/Workout-Center"
 
 
 @attribute [Authorize(Roles = "Admin, Sudo, Coach")];
@@ -15,11 +15,14 @@
             <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center">
                 <RadzenCard style="border-radius: 12px;">
                     <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Center">
-                        <div style="position: relative; background-color: pink; min-height: 500px; min-width: 500px; padding: 1rem;">
+                        <div
+                            style="position: relative; background-color: pink; min-height: 500px; min-width: 500px; padding: 1rem;">
                             <RadzenStack JustifyContent="JustifyContent.Start">
                                 @foreach (var block in NewWorkout.WorkoutBlocks)
                                 {
-                                    <RadzenCard @onclick="() => SelectBlock(block.BlockOrder)" class="@((block.BlockOrder == _selectedBlockOrder) ? "workout-block-selected" : "workout-block")" style="max-width: 200px;">
+                                    <RadzenCard @onclick="() => SelectBlock(block.BlockOrder)"
+                                        class="@((block.BlockOrder == _selectedBlockOrder) ? "workout-block-selected" : "workout-block")"
+                                        style="max-width: 200px;">
                                         <RadzenStack>
                                             <p style="display: inline-block;">@block.BlockName</p>
                                         </RadzenStack>
@@ -27,26 +30,30 @@
                                 }
                             </RadzenStack>
                             <div style="position: absolute; right: 10px; bottom: 10px; z-index: 5;">
-                                <RadzenButton Text="Add" Icon="add" Click="AddNewWorkoutBlock" Size="ButtonSize.Large" />
+                                <RadzenButton Text="Add" Icon="add" Click="AddNewWorkoutBlock"
+                                    Size="ButtonSize.Large" />
                             </div>
                         </div>
-                        @if(_selectedBlockOrder != null)
+                        @if (_selectedBlockOrder != null)
                         {
-                            <RadzenStack style="background-color: lightgray; min-height: 500px; min-width: 350px; padding: 1rem;">
-                                
+                            <RadzenStack
+                                style="background-color: lightgray; min-height: 500px; min-width: 350px; padding: 1rem;">
+
                                 <p class=" text-2xl font-semibold mb-4">Parameters</p>
 
                                 <p class="text-lg font-medium">Block Type</p>
-                                <RadzenDropDown TValue="string" @bind-Value="@_selectedBlock.BlockType" Change="@( args => BlockTypeDropDownChange(args))"  Data="@_blockTypes" style="margin-top: 0"/>
+                                <RadzenDropDown TValue="string" @bind-Value="@_selectedBlock.BlockType"
+                                    Change="@( args => BlockTypeDropDownChange(args))" Data="@_blockTypes"
+                                    style="margin-top: 0" />
 
-                                @switch(_selectedBlock.BlockType)
+                                @switch (_selectedBlock.BlockType)
                                 {
                                     case "Warmup":
                                         break;
                                     case "Strength":
                                         break;
                                     case "Long Run":
-                                        <LongRun OnChange="UpdateLongRunData"/>
+                                        <LongRun OnChange="UpdateLongRunData" />
                                         break;
                                     case "Cooldown":
                                         break;
@@ -58,27 +65,48 @@
                                 }
                             </RadzenStack>
                         }
-                        <RadzenStack JustifyContent="JustifyContent.SpaceBetween" AlignItems="AlignItems.Start" Style="min-width: 225px; width: 100%; padding: 1rem;">
+                        <RadzenStack JustifyContent="JustifyContent.SpaceBetween" AlignItems="AlignItems.Start"
+                            Style="min-width: 225px; width: 100%; padding: 1rem;">
                             <div>
                                 <p class=" text-2xl font-semibold">Workout Settings</p>
                                 <RadzenStack AlignItems="AlignItems.Start" class=" mt-4">
-                                    <p class="text-lg font-medium">New Workout Name</p> 
-                                    <RadzenTextBox @bind-Value=NewWorkout.WorkoutName Placeholder="Workout Name" style="width: 100%;"/>
+                                    <p class="text-lg font-medium">New Workout Name</p>
+                                    <RadzenTextBox @bind-Value=NewWorkout.WorkoutName Placeholder="Workout Name"
+                                        style="width: 100%;" />
                                 </RadzenStack>
                                 <RadzenStack AlignItems="AlignItems.Start" class=" mt-4">
                                     <p class="text-lg font-medium">Notes</p>
-                                    <RadzenTextArea @bind-Value=NewWorkout.Notes Placeholder="Workout Notes" style="width: 100%;" MaxLength="150" />
+                                    <RadzenTextArea @bind-Value=NewWorkout.Notes Placeholder="Workout Notes"
+                                        style="width: 100%;" MaxLength="150" />
                                 </RadzenStack>
                             </div>
-                            <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"  class="mb-4 w-full">
-                                <RadzenButton Text="Discard" ButtonStyle="ButtonStyle.Warning"/>
-                                <RadzenButton Text="Create" Click="CreateWorkout"/>
+                            <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
+                                class="mb-4 w-full">
+                                <RadzenButton Text="Discard" ButtonStyle="ButtonStyle.Warning" />
+                                <RadzenButton Text="Create" Click="CreateWorkout" />
                             </RadzenStack>
                         </RadzenStack>
+
+                    </RadzenStack>
+                </RadzenCard>
+                <RadzenCard>
+                    <RadzenStack JustifyContent="JustifyContent.SpaceBetween" AlignItems="AlignItems.Start"
+                        Style="min-width: 225px; width: 100%; padding: 1rem;">
+                        <div>
+                            <p class=" text-2xl font-semibold">Assign To</p>
+                            <RadzenStack AlignItems="AlignItems.Start" class=" mt-4">
+                                <p class="text-lg font-medium">Search</p>
+                                <RadzenDropDown @bind-Value=value Data=@customers LoadData=@LoadData Count="@count"
+                                    AllowVirtualization="true" AllowClear="true" AllowFiltering="true"
+                                    TextProperty="CompanyName" ValueProperty="CustomerID"
+                                    Style="width: 100%; max-width: 400px;" />
+                            </RadzenStack>
+                        </div>
+
                     </RadzenStack>
                 </RadzenCard>
             </RadzenStack>
-       </RadzenCard>
+        </RadzenCard>
     </div>
     <div>
         <p>Choose From Library</p>
@@ -86,26 +114,24 @@
 </div>
 
 <style>
+    .workout-center-container {
+        width: 100%;
+        height: fit-content;
 
-.workout-center-container{
-width: 100%;
-height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
-display: flex;
-    flex-direction: column;
-    justify-content: center;
+        background-color: red;
 
-    background-color: red;
+    }
 
-}
+    .workout-block {
+        scale: 1;
+    }
 
-.workout-block{
-    scale: 1;
-}
+    .workout-block-selected {
 
-.workout-block-selected{
-    
-    scale: 1.1;
-}
-
+        scale: 1.1;
+    }
 </style>
