--- a/Client/Pages/CoachesDashboard.razor
+++ b/Client/Pages/CoachesDashboard.razor
@@ -19,8 +19,7 @@
         else
         {
             <div class="dashboard-container">
-                <div
-                    class="bg-red dark:bg-slate-800 w-full h-full flex flex-col justify-center content-center p-4 left-0 top-0">
+                <div class=" dark:bg-slate-800 w-full h-full flex flex-col justify-center content-center p-4 left-0 top-0">
                     <RadzenStack JustifyContent="JustifyContent.Center" AlignItems="AlignItems.Start" style=" "
                         Gap="1.5rem">
                         <div class="flex justify-between content-cente w-full">
@@ -35,9 +34,11 @@
                                     SlotSelect=@OnSlotSelect AppointmentSelect=@OnAppointmentSelect
                                     AppointmentRender=@OnAppointmentRender>
 
+                                    <RadzenDayView />
                                     <RadzenWeekView />
                                     <RadzenMonthView />
                                     <RadzenYearView />
+
                                 </RadzenScheduler>
                             </RadzenCard>
                             <RadzenCard class="athlete-container" style="border-radius: 12px;">
@@ -58,7 +59,8 @@
                                         }
                                         else
                                         {
-                                            <RadzenStack>
+                                            <RadzenStack AlignItems="AlignItems.Start">
+                                                <h1>@_selectedDate.ToString("MMMM/dd")</h1>
                                                 <RadzenDataGrid Data="_myAtheletes" TItem="UserInformation">
                                                     <Columns>
                                                         <RadzenDataGridColumn TItem="UserInformation" Title="Name" Context="user">
@@ -66,6 +68,32 @@
                                                                 <p>@user.FirstName @user.LastName</p>
                                                             </Template>
                                                         </RadzenDataGridColumn>
+                                                        <RadzenDataGridColumn TItem="UserInformation" Title="Workout"
+                                                            Context="user">
+                                                            <Template>
+                                                                @{
+                                                                    var assignedWorkout = _workoutsForDay.FirstOrDefault(p =>
+                                                                    p.AssigneeId == user.UserId);
+                                                                    if (assignedWorkout != null)
+                                                                    {
+                                                                        <p>@assignedWorkout.WorkoutName</p>
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <p>No Workout</p>
+                                                                    }
+                                                                }
+                                                            </Template>
+                                                        </RadzenDataGridColumn>
+                                                        <RadzenDataGridColumn TItem="UserInformation" Title="New Workout"
+                                                            Context="user">
+                                                            <Template>
+                                                                <RadzenButton ButtonStyle="ButtonStyle.Primary"
+                                                                    Text="Assign Workout" Icon="add_circle_outline" />
+                                                            </Template>
+                                                        </RadzenDataGridColumn>
+
+
                                                     </Columns>
                                                 </RadzenDataGrid>
                                             </RadzenStack>
