--- a/Client/Pages/WorkoutCenter/WorkoutCenter.razor
+++ b/Client/Pages/WorkoutCenter/WorkoutCenter.razor
@@ -96,10 +96,12 @@
                             <p class=" text-2xl font-semibold">Assign To</p>
                             <RadzenStack AlignItems="AlignItems.Start" class=" mt-4">
                                 <p class="text-lg font-medium">Search</p>
-                                <RadzenDropDown @bind-Value=value Data=@customers LoadData=@LoadData Count="@count"
-                                    AllowVirtualization="true" AllowClear="true" AllowFiltering="true"
-                                    TextProperty="CompanyName" ValueProperty="CustomerID"
-                                    Style="width: 100%; max-width: 400px;" />
+                                <RadzenDropDown Count="@_myAtheletesCount" TValue="User_Short" Value="@_selectedAthlete"
+                                    Change="@(args => SelectAthlete(args))" AllowVirtualization="false"
+                                    AllowClear="true" AllowFiltering="true" TextProperty="name"
+                                    Style="width: 100%; max-width: 400px;" Data="@_myAtheletes"
+                                    LoadData="@((args) => Debounce(() => MyTeamLoadDataEvent(args)))" />
+
                             </RadzenStack>
                         </div>
 
